syntax = "proto3";

package CIM.Grpc;
option go_package=".;cim";
option optimize_for = LITE_RUNTIME;

//import "CIM.Def.proto";
import "CIM.Group.proto";
import "CIM.Login.proto";
import "CIM.Message.proto";
import "Grpc.Def.proto";

service Gate{
    // ping
    rpc Ping(CIM.Login.CIMHeartBeat) returns(CIM.Login.CIMHeartBeat) {}

    // 发消息
    rpc SendMsgData(CIM.Message.CIMMsgData) returns(CIM.Message.CIMMsgDataAck) {}
    // 消息收到ACK
    rpc AckMsgData(CIM.Message.CIMMsgDataAck) returns(Empty) {}

    // 停止接收消息
    rpc StopReceivePacket(Empty) returns(Empty) {}

    // 群成员变更通知
    rpc GroupMemberChanged(CIM.Group.CIMGroupMemberChangedNotify) returns(Empty){}
}